--- a/app/app/components/MainPart.module.css
+++ b/app/app/components/MainPart.module.css
@@ -4,11 +4,18 @@
     background-image: url("/main.jpg");
     background-size: cover;
     background-position: center;
-    color: #333;
+    color:  #333;
     width: 100%;
     height: 800px;
     margin-top: -150px;
 }
+
+
+
+[data-theme="dark"] .mainPart {
+    background-image: url("/main-dark.jpg"); /* Dark mode image */
+}
+
 
 .mainTitle {
     font-size: 2.5rem;
@@ -36,6 +43,7 @@
     font-size: 1rem;
     margin-bottom: 30px;
     max-width: 450px;
+    color: var(--foreground);
 }
 
 .buttonContainer {
